server side application init
