# sparknetworks/src/main/java/com/sparknetworks/filterhandler/business/FilterBusiness.java
@@ -2,7 +2,13 @@ package com.sparknetworks.filterhandler.business;
 
 import org.springframework.stereotype.Component;
 
+import com.sparknetworks.model.FilterHandlerResponse;
+
 @Component
 public class FilterBusiness {
 
+	public FilterHandlerResponse getAllPersons() {
+		return null;
+		
+	}
 }
