# sparknetworks/src/main/java/com/sparknetworks/filterhandler/services/FilterService.java
@@ -1,0 +1,9 @@
+package com.sparknetworks.filterhandler.services;
+
+import java.util.List;
+
+import com.sparknetworks.model.PersonDetailsModel;
+
+public interface FilterService {
+	List<PersonDetailsModel> getAll();
+}
