# sparknetworks/src/main/java/com/sparknetworks/filterhandler/services/Impl/FilterServiceImpl.java
@@ -1,0 +1,19 @@
+package com.sparknetworks.filterhandler.services.Impl;
+
+import java.util.List;
+
+import org.springframework.stereotype.Service;
+
+import com.sparknetworks.filterhandler.services.FilterService;
+import com.sparknetworks.model.PersonDetailsModel;
+
+@Service
+public class FilterServiceImpl implements FilterService {
+
+	@Override
+	public List<PersonDetailsModel> getAll() {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+}
